--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "main": "dist/index",
   "dependencies": {
+    "@babel/cli": "^7.10.4",
     "emailjs-addressparser": "^2.0.2",
     "emailjs-base64": "^1.1.4",
     "emailjs-imap-handler": "^3.0.2",
